<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ComplaintActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subject_list_lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/add_ground"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".activity.ProfileActivity">

        <RelativeLayout
            android:id="@+id/back_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/home_header_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_5sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/back_arrow"
                app:tint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/profile_details"
                android:textColor="@color/darkBlack"
                android:textSize="@dimen/_17sdp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/full_name"
                android:textColor="@color/font_color_light_gray"
                android:textSize="@dimen/_13sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/light_blue_back"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@null"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/edt_font_color"
                    android:textColorHint="@color/font_color_gray"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginVertical="@dimen/_10sdp"
                android:includeFontPadding="false"
                android:text="@string/phone_number"
                android:textColor="@color/font_color_light_gray"
                android:textSize="@dimen/_13sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/light_blue_back"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@null"
                    android:hint="@string/phone_hint"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/edt_font_color"
                    android:textColorHint="@color/font_color_gray"
                    android:textSize="@dimen/_14sdp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:background="@drawable/yellow_back"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sign_up_btn_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/_11sdp"
                    android:includeFontPadding="false"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/add_ground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:visibility="gone">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/small_banner_id" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/progress_lay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_5sdp">

        <ProgressBar
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>